# airbnb_market_intelligence

./: .dockerignore  .env  .gitignore  Dockerfile.dashboard  README.md  dashboard.Dockerfile  docker-compose.yml  main.py  pipeline.Dockerfile  pyproject.toml  requirements-dashboard.txt  requirements.txt  scratch_fix_paths.py
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
config/: cities.yaml  cleaning_rules.yaml  enrichment_config.yaml  ml_config.yaml  schema_map.yaml  validation_rules.yaml
dashboard/: Dockerfile  Home.py  config.py
dashboard/backend/: data_service.py  ml_service.py  shap_explainer.py
dashboard/components/: ai_chat.py  charts.py  kpi_cards.py  map_renderer.py
dashboard/pages/: 1_Market_Overview.py  2_Price_Estimator.py  3_Explainability.py  4_MLOps_Governance.py  5_Valuation_&_Arbitrage.py  6_Supply_&_Demand.py  7_Intervention_Radar.py
notebooks/: 01_summary_statistics.ipynb  02_geographic_analysis.ipynb  03_temporal_trends.ipynb  04_host_supply_analysis.ipynb  05_review_demand_analysis.ipynb  README.md  helpers.py
pipeline/: __init__.py  automation.py  cleaner.py  downloader.py  enricher.py  harmonizer.py  metadata.py  modeler.py  profiler.py  relationship_mapper.py  utils.py  validator.py
scripts/: restructure_project.py  run_pipeline_logic.py
sql/: analytical_queries.sql  star_schema.sql
tests/: test_bias_auditor.py  test_cleaner.py  test_enricher.py  test_evaluator.py  test_feature_store.py  test_metadata.py  test_modeler.py  test_profiler.py  test_stats_utils.py  test_trainer.py  test_utils.py  test_validator.py
(+56 files in other folders)
